# xml-traansformations-python

./: Dockerfile  Makefile  README.md  batect.yml  pyproject.toml  setup.cfg
entrypoints/: xml.py
resources/xml/: tmp_creanswer_202206210952.csv  xml_transformation.parquet
scripts/: lint.sh  run.sh
tests/: conftest.py
tests/integration/: test_main.py
tests/unit/: test_transform.py
xml_transformations/: arguments.py  entities.py  extract.py  load.py  main.py  transform.py
