[tool.poetry]
name = "xml_transformations"
version = "0.1.0"
description = "Study example for working with xml in spark"
authors = ["Alex Khabarov <hub.sasha@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
wemake-python-styleguide = "^0.16.1"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
